<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/welcomescreen"
    tools:context="com.example.abhisingh.checkyouriqnow.MainActivity">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textWel"
        android:id="@+id/textWel"
        android:textColor="#ffffff"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/toolBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTest"
        android:id="@+id/button"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/editText"
        android:layout_alignRight="@+id/welDetails"
        android:layout_alignEnd="@+id/welDetails"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/welDetails"
        android:id="@+id/welDetails"
        android:textColor="#ffffff"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textWel"
        android:layout_alignStart="@+id/textWel"
        android:textSize="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EnterName"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:background="#ffffff"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
