<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhisingh.checkyouriqnow.Test">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"></include>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolBar">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7c7c7c"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/ScrollView1"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ques1"
            android:layout_marginTop="35dp"
            android:textColor="#000000"
            android:text="@string/ques1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ques1"
            android:layout_alignLeft="@+id/ques1"
            android:layout_alignStart="@+id/ques1"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1o1"
                android:checked="false"
                android:text="T" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1o2"
                android:checked="false"
                android:text="R" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1o3"
                android:checked="false"
                android:text="C" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q1o4"
                android:checked="false"
                android:text="S" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ques2"
            android:id="@+id/ques2"
            android:layout_below="@+id/radioGroup"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ques2"
            android:layout_alignLeft="@+id/ques1"
            android:layout_alignStart="@+id/ques1"
            android:id="@+id/radioGroup2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/i"
                android:checked="false"
                android:text="154" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ii"
                android:checked="false"
                android:text="254" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iii"
                android:checked="false"
                android:text="256" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv"
                android:checked="false"
                android:text="260" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ques3"
            android:id="@+id/ques3"
            android:layout_below="@+id/radioGroup2"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ques3"
            android:layout_alignLeft="@+id/ques1"
            android:layout_alignStart="@+id/ques1"
            android:id="@+id/radioGroup3">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q301"
                android:checked="false"
                android:text="15" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3o2"
                android:checked="false"
                android:text="10" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3o3"
                android:checked="false"
                android:text="6" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3o4"
                android:checked="false"
                android:text="4" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ques4"
            android:id="@+id/ques4"
            android:layout_below="@+id/radioGroup3"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ques4"
            android:layout_alignLeft="@+id/ques1"
            android:layout_alignStart="@+id/ques1"
            android:id="@+id/radioGroup4">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q401"
                android:checked="false"
                android:text="@string/q401" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q4o2"
                android:checked="false"
                android:text="@string/q402" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q4o3"
                android:checked="false"
                android:text="@string/q403" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q4o4"
                android:checked="false"
                android:text="@string/q404" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ques5"
            android:id="@+id/ques5"
            android:layout_below="@+id/radioGroup4"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ques5"
            android:layout_alignLeft="@+id/ques1"
            android:layout_alignStart="@+id/ques1"
            android:id="@+id/radioGroup5">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q501"
                android:checked="false"
                android:text="263" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5o2"
                android:checked="false"
                android:text="441" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5o3"
                android:checked="false"
                android:text="482" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5o4"
                android:checked="false"
                android:text="572" />
        </RadioGroup>


        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup5"
            android:text="@string/submit"
            android:layout_centerHorizontal="true"/>



    </RelativeLayout>

    </ScrollView>

</RelativeLayout>
